--- a/package.json
+++ b/package.json
@@ -1,38 +1,61 @@
 {
-  "name": "flag-guess-game",
+  "name": "flags-guessing",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.0",
-    "@angular/common": "^18.2.0",
-    "@angular/compiler": "^18.2.0",
-    "@angular/core": "^18.2.0",
-    "@angular/forms": "^18.2.0",
-    "@angular/platform-browser": "^18.2.0",
-    "@angular/platform-browser-dynamic": "^18.2.0",
-    "@angular/router": "^18.2.0",
-    "rxjs": "~7.8.0",
+    "@angular/animations": "18.2.7",
+    "@angular/common": "18.2.7",
+    "@angular/compiler": "18.2.7",
+    "@angular/core": "18.2.7",
+    "@angular/forms": "18.2.7",
+    "@angular/platform-browser": "18.2.7",
+    "@angular/platform-browser-dynamic": "18.2.7",
+    "@angular/router": "18.2.7",
+    "@angular/service-worker": "18.2.7",
+    "@ngneat/transloco": "^4.2.2",
+    "@ngneat/transloco-persist-lang": "^4.0.0",
+    "@ngrx/operators": "18.0.2",
+    "@ngrx/signals": "18.0.2",
+    "flags-guessing": "file:",
+    "ngx-cookie-service": "18.0.0",
+    "primeflex": "^3.3.0",
+    "primeicons": "^6.0.1",
+    "primeng": "^17.3.0",
+    "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.7",
-    "@angular/cli": "^18.2.7",
-    "@angular/compiler-cli": "^18.2.0",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.2.0",
+    "@angular-devkit/build-angular": "18.2.7",
+    "@angular-eslint/builder": "18.3.1",
+    "@angular-eslint/eslint-plugin": "18.3.1",
+    "@angular-eslint/eslint-plugin-template": "18.3.1",
+    "@angular-eslint/schematics": "18.3.1",
+    "@angular-eslint/template-parser": "18.3.1",
+    "@angular/cli": "18.2.7",
+    "@angular/compiler-cli": "18.2.7",
+    "@types/jasmine": "~4.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.5.2"
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "prettier": "^2.8.1",
+    "prettier-eslint": "^15.0.1",
+    "typescript": "5.5"
   }
 }
